--- a/Sanjay Project/storyboards/SignUp.storyboard
+++ b/Sanjay Project/storyboards/SignUp.storyboard
@@ -226,6 +226,16 @@
                     <view key="view" contentMode="scaleToFill" id="diu-dn-R2U">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ERh-HP-9wj">
+                                <rect key="frame" x="0.0" y="75" width="393" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="qC3-R7-u4J" id="Q2Z-fe-6h7"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Yae-4e-Lnw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
