--- a/Sanjay Project/cells/ProductMainCell/ProductMainCell.xib
+++ b/Sanjay Project/cells/ProductMainCell/ProductMainCell.xib
@@ -11,39 +11,83 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductMainCell" rowHeight="265" id="KGk-i7-Jjw" customClass="ProductMainCell" customModule="Sanjay_Project" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="357" height="265"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductMainCell" rowHeight="215" id="KGk-i7-Jjw" customClass="ProductMainCell" customModule="Sanjay_Project" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="696" height="215"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="357" height="265"/>
+                <rect key="frame" x="0.0" y="0.0" width="696" height="215"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VTB-Zi-xYi">
-                        <rect key="frame" x="0.0" y="0.0" width="357" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="696" height="150"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="l dljff ldj flj dlfj dfabel label label" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Tym-KZ-L1s">
-                                <rect key="frame" x="0.0" y="140" width="357" height="24"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DU1-yc-C2f">
-                                <rect key="frame" x="128.66666666666666" y="20" width="100" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="EpX-eg-zkC"/>
-                                    <constraint firstAttribute="height" constant="100" id="ICY-My-Qgh"/>
-                                </constraints>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="wvw-iG-5HY">
+                                <rect key="frame" x="10" y="10" width="676" height="67"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ozb-Aw-cul">
+                                        <rect key="frame" x="0.0" y="0.0" width="135.33333333333334" height="67"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dlkj flkdj flkjd flkjd lkfj dlkfj ldkjf lkdj flkdj flkdj flkdj flkdj flkdj fldj fd" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ihO-Md-Z6o">
+                                        <rect key="frame" x="135.33333333333334" y="0.0" width="135.00000000000003" height="67"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rate" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gAV-ut-2hW">
+                                        <rect key="frame" x="270.33333333333331" y="0.0" width="135.33333333333331" height="67"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unit" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sH7-Hu-rV9" userLabel="Lbl unit">
+                                        <rect key="frame" x="405.66666666666669" y="0.0" width="135.00000000000006" height="67"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amout" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usy-ot-rAU">
+                                        <rect key="frame" x="540.66666666666663" y="0.0" width="135.33333333333337" height="67"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Nlq-UE-ibZ">
+                                <rect key="frame" x="436" y="97" width="240" height="40.333333333333343"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QvD-Nw-HuC">
+                                        <rect key="frame" x="0.0" y="0.0" width="73.333333333333329" height="40.333333333333336"/>
+                                        <fontDescription key="fontDescription" name="Charter-Roman" family="Charter" pointSize="16"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Vat 10%">
+                                            <color key="titleColor" systemColor="systemPinkColor"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2It-Kw-rEQ">
+                                        <rect key="frame" x="83.333333333333371" y="0.0" width="73.333333333333314" height="40.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Edit"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fFq-5b-GmN">
+                                        <rect key="frame" x="166.66666666666663" y="0.0" width="73.333333333333314" height="40.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Delete"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="DU1-yc-C2f" firstAttribute="centerX" secondItem="VTB-Zi-xYi" secondAttribute="centerX" id="JXv-7Q-6fZ"/>
-                            <constraint firstItem="Tym-KZ-L1s" firstAttribute="leading" secondItem="VTB-Zi-xYi" secondAttribute="leading" id="LsC-xQ-9nB"/>
-                            <constraint firstAttribute="trailing" secondItem="Tym-KZ-L1s" secondAttribute="trailing" id="Tyn-QK-zjK"/>
-                            <constraint firstAttribute="height" constant="200" id="VUb-mR-a4H"/>
-                            <constraint firstItem="DU1-yc-C2f" firstAttribute="top" secondItem="VTB-Zi-xYi" secondAttribute="top" constant="20" id="ihf-Vi-yYb"/>
-                            <constraint firstItem="Tym-KZ-L1s" firstAttribute="centerX" secondItem="DU1-yc-C2f" secondAttribute="centerX" id="okn-NE-xLj"/>
-                            <constraint firstItem="Tym-KZ-L1s" firstAttribute="top" secondItem="DU1-yc-C2f" secondAttribute="bottom" constant="20" id="rF8-R1-S2R"/>
+                            <constraint firstItem="Nlq-UE-ibZ" firstAttribute="top" secondItem="wvw-iG-5HY" secondAttribute="bottom" constant="20" id="5du-mE-Hxj"/>
+                            <constraint firstItem="wvw-iG-5HY" firstAttribute="leading" secondItem="VTB-Zi-xYi" secondAttribute="leading" constant="10" id="EcK-GF-8z0"/>
+                            <constraint firstAttribute="trailing" secondItem="Nlq-UE-ibZ" secondAttribute="trailing" constant="20" id="JIk-iI-fwJ"/>
+                            <constraint firstAttribute="height" constant="150" id="VUb-mR-a4H"/>
+                            <constraint firstAttribute="trailing" secondItem="wvw-iG-5HY" secondAttribute="trailing" constant="10" id="hVU-pz-uTx"/>
+                            <constraint firstItem="wvw-iG-5HY" firstAttribute="top" secondItem="VTB-Zi-xYi" secondAttribute="top" constant="10" id="vZb-gz-u1r"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -55,17 +99,24 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="imgProduct" destination="DU1-yc-C2f" id="jbG-3P-dGU"/>
-                <outlet property="lblName" destination="Tym-KZ-L1s" id="Cup-0c-biM"/>
+                <outlet property="lblAmount" destination="usy-ot-rAU" id="Ojk-cU-kki"/>
+                <outlet property="lblName" destination="Ozb-Aw-cul" id="OXq-G9-ffB"/>
+                <outlet property="lblQuantity" destination="ihO-Md-Z6o" id="Fc8-Yy-afg"/>
+                <outlet property="lblRate" destination="gAV-ut-2hW" id="TCo-Bw-SCw"/>
+                <outlet property="lblUnit" destination="sH7-Hu-rV9" id="NsC-XY-rqH"/>
                 <outlet property="viewBack" destination="VTB-Zi-xYi" id="7CB-Ym-uyu"/>
             </connections>
-            <point key="canvasLocation" x="154.96183206106869" y="77.816901408450704"/>
+            <point key="canvasLocation" x="413.74045801526717" y="60.211267605633807"/>
         </tableViewCell>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
