--- a/Sanjay Project/cells/ProductMainCell/ProductMainCell.xib
+++ b/Sanjay Project/cells/ProductMainCell/ProductMainCell.xib
@@ -71,6 +71,9 @@
                                         <rect key="frame" x="83.333333333333371" y="0.0" width="73.333333333333314" height="40.333333333333336"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Edit"/>
+                                        <connections>
+                                            <action selector="actionEdit:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Rg0-Xe-cCn"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fFq-5b-GmN">
                                         <rect key="frame" x="166.66666666666663" y="0.0" width="73.333333333333314" height="40.333333333333336"/>
@@ -101,6 +104,8 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="btnDelete" destination="fFq-5b-GmN" id="2QR-TQ-TQQ"/>
+                <outlet property="btnEdit" destination="2It-Kw-rEQ" id="llQ-nK-c1U"/>
                 <outlet property="lblAmount" destination="usy-ot-rAU" id="Ojk-cU-kki"/>
                 <outlet property="lblName" destination="Ozb-Aw-cul" id="OXq-G9-ffB"/>
                 <outlet property="lblQuantity" destination="ihO-Md-Z6o" id="Fc8-Yy-afg"/>
@@ -116,7 +121,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemPinkColor">
-            <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
